Fixed an issue with the signin/signup pages jumping on transition in animations

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -39,8 +39,6 @@
 // This doesn't do shit
 .page {
     position: absolute;
-    left: 15px;
-    right: 15px;
 }
 
 .page-enter {
