--- a/client/src/views/Signin/Signin.scss
+++ b/client/src/views/Signin/Signin.scss
@@ -1,5 +1,5 @@
 #Signin {
-    flex-grow: 1;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: column;
